<?xml version="1.0"?>
<package format="3">
  <name>nanomap_ros
  </name>
  <version>0.0.0</version>
  <description>
    nanomap_ros is the ros interface for the nanomap mapping and simulation library.
  </description>
  <maintainer email="violet.walker.phd@gmail.com">Violet Walker</maintainer>
  <license>BSD</license>

  <author>Violet Walker</author>
  <author email="violet.walker.phd@gmail.com">Violet Walker</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nanomap_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>



</package>
